# J2V8

./: .classpath  .dockerignore  .gitignore  .gitlab-ci.yml  .project  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  PUBLISHING.md  README.md  build-node.sh  build.gradle  build.properties  build.py  build.sh  buildAll.sh  buildJ2V8_macos.sh  build_4_x.sh  build_all.py  build_constants.py  build_mac.sh  build_node.sh  build_platform.py  build_settings.py  config_android.py  config_linux.py  config_macos.py  config_win32.py  cross_build.py  deploy_snapshots.sh  diff.txt  docker_build.py  gradle.properties  gradlew  j2v8-cli.cmd  j2v8-cli.sh  j2v8.sln  nodejs.py  (+7 more)
.github/workflows/: Html.on  build_and_release.yml  build_and_test.yml  main.yml
build_system/: .gitignore  build_configs.py  build_constants.py  build_executor.py  build_interactive.py  build_settings.py  build_structures.py  build_utils.py  cli.py  cmake_utils.py  config_alpine.py  config_android.py  config_linux.py  config_macos.py  config_win32.py  constants.py  cp.py  cross_build.py  docker_build.py  docker_configs.py  immutable.py  java_build_steps.py  mkdir.py  rm.py  run_tests.py  shared_build_steps.py  shell_build.py  vagrant_build.py
build_system/polyfills/: cp.py  mkdir.py  rm.py
build_system/tests/: test_alpine_linux_docker.py  test_android_docker.py  test_linux_docker.py  test_macos_vagrant.py  test_win32_docker.py  test_win32_native.py
build_system/tests/runner/: output_redirector.py  test_asserts.py  test_result.py  test_runner.py  test_utils.py
cmake/: BuildUtils.cmake  FindJava.cmake  NodeJsUtils.cmake  Policies.cmake
dep_includes_macosx/: classfile_constants.h  jawt.h  jawt_md.h  jni.h  jni_md.h
docker/: Dockerfile  Dockerfile.android  Dockerfile.linux  build.sh
docker/alpine/: Dockerfile
docker/android/: .gitattributes  .gitignore  Dockerfile  android.arm.toolchain.cmake  android.arm64.toolchain.cmake  android.x86.toolchain.cmake  android.x86_64.toolchain.cmake  start-emulator.template.sh  supervisord.template.conf  wait-for-emulator.sh
docker/linux/: Dockerfile
docker/shared/: .gitignore  install-android-dependencies.sh  install.alpine.packages.sh  install.cmake.sh  install.debian.packages.sh  install.gradle.sh  install.jdk.sh  install.maven.sh
docker/win32/: Dockerfile  install.cmake.ps1  install.jdk.ps1  install.maven.ps1  install.python.ps1  install.vscpp.ps1  mem.ps1  unzip.ps1  wget.ps1
example/: README.md  build.gradle  gradle.properties  settings.gradle
example/src/main/: AndroidManifest.xml
example/src/main/java/com/example/j2v8hello/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  android_stdio_stubs.c  com_eclipsesource_v8_V8Impl.cpp  com_eclipsesource_v8_V8Impl.h  j2v8.filters  j2v8.vcxproj
native/: .gitignore  Makefile  Makefile.build  build_android.sh  build_linux.sh  build_mac.sh  build_windows.sh  buildall_android.sh  buildall_linux.sh  buildall_osx.sh  buildall_windows.bat  buildall_windows.sh  common.gypi  configure  j2v8.gyp
native/src/: com_eclipsesource_v8_V8Impl.cc  com_eclipsesource_v8_V8Impl.h
native/tools/: genv8constants.py  gyp_j2v8.py
node.patches/: 7.4.0.diff  7.9.0.diff  8.10.1.diff
releng/com.eclipsesource.j2v8.p2site/: .project  category.xml
releng/maven/: build_and_deploy.sh
releng/osgi/: publish.sh
src/assembly/: central-bundle.xml
src/com/eclipsesource/v8/: PersistentV8Object.java  V8.java  V8Array.java  V8ExecutionException.java  V8Impl.java  V8Object.java  V8ResultUndefined.java  V8RuntimeException.java
src/com/eclipsesource/v8/tests/: AllTests.java  V8ArrayTests.java  V8CallbackTests.java  V8JSFunctionCallTest.java  V8ObjectTest.java  V8Tests.java
src/main/: AndroidManifest.xml
src/main/java/com/eclipsesource/v8/: ConcurrentV8.java  ConcurrentV8Runnable.java  DebugTunnel.java  J2V8Testing.java  JavaCallback.java  JavaVoidCallback.java  LibraryLoader.java  LoggableCallback.java  LoggingJavaCallback.java  LoggingJavaVoidCallback.java  NodeJS.java  OS.java  PlatformDetector.java  Reference.java  Releasable.java  V8.java  V8Array.java  V8ArrayAccessor.java  V8ArrayBuffer.java  V8Error.java  V8Function.java  V8Int32Array.java  V8Int8Array.java  V8JavaAdapter.java  V8JavaCache.java  V8JavaClassInterceptor.java  V8JavaClassInterceptorContext.java  V8JavaClassProxy.java  V8JavaInstanceMethodProxy.java  V8JavaMethodProxy.java  V8JavaObjectUtils.java  V8JavaStaticMethodProxy.java  V8Lock.java  V8Locker.java  V8Object.java  V8ObjectAccessor.java  V8ParseException.java  V8ResultUndefined.java  V8RuntimeException.java  V8ScriptCompilationException.java  (+5 more)
src/main/java/com/eclipsesource/v8/debug/: BooleanMirror.java  BreakEvent.java  BreakHandler.java  DebugHandler.java  EventData.java  ExecutionState.java  Frame.java  Mirror.java  NumberMirror.java  (+5 more)
src/test/java/com/eclipsesource/v8/: A_RunAheadTests.java  AllTests.java  ConcurrentV8Test.java  LibraryLoaderTest.java  NodeJSRunServerTest.java  NodeJSTest.java  NodeJSTests.java  NullScriptExecuteTest.java  PlatformDetectorTest.java  V8ArrayBufferTest.java  V8ArrayTest.java  V8CallbackTest.java  V8ErrorTest.java  V8Int32ArrayTest.java  V8Int8ArrayTest.java  V8JSFunctionCallTest.java  V8JavaAdapterTest.java  V8LockTest.java  V8LockerTest.java  V8MultiThreadTest.java  V8ObjectTest.java  V8ParseExceptionTest.java  V8RuntimeNotLoadedTest.java  V8ScriptCompilationExceptionTest.java  V8ScriptExecutionExceptionTest.java  V8StaticInitTest.java  V8Test.java  V8TypedArraysTest.java  V8WeakReferenceHandlerTest.java
v8/: Dockerfile  install-deps.sh
v8/android-arm/: args.gn
v8/android-arm64/: args.gn
v8/android-ia32/: args.gn
v8/android-x64/: args.gn
v8/linux-x64/: args.gn
v8/macos-arm64/: args.gn
v8build/: .gitignore  Dockerfile  build_linux_android.sh  v8Build.sh
vagrant/macos/: .profile  Vagrantfile
vagrant/win32/: Vagrantfile  ie-box-automation-plugin.rb  switch-to-winrm-plugin.rb
vagrant/win32/tools/: ConfigWinRM.lnk  readme.txt  setup.winrm.ps1
(+72 files in other folders)
