target_os = "android"
target_cpu = "arm"
v8_target_cpu = "arm"
is_component_build = false
is_debug = false
use_custom_libcxx = false
v8_monolithic = true
v8_use_external_startup_data = false
v8_enable_i18n_support= false
symbol_level = 0
v8_android_log_stdout = true
v8_enable_pointer_compression = false

